--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "email": "subbu@ebaysf.com"
     }],
     "name": "cluster2",
-    "version": "0.3.5",
+    "version": "0.3.5-cdb01",
     "repository": {
         "type": "git",
         "url": "https://github.com/ql-io/cluster2"
